OO-5858: better warning if questions cannot be deleted